k8s/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
   - image: nginx:1.14
     name: nginx
     ports:
      - containerPort: 80
      - containerPort: 443
