k8s/shop-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-page
  template:
    metadata:
      labels:
        app: main-page
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: main-page-html
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-page
  template:
    metadata:
      labels:
        app: payment-page
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: payment-page-html
---
apiVersion: v1
kind: Service
metadata:
  name: svc-main-page
spec:
  selector:
    app: main-page
  ports:
  - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-payment-page
spec:
  selector:
    app: payment-page
  ports:
  - port: 80
