k8s/svc-extname.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-extname
spec:
  type: ExternalName
  externalName: www.google.com
