k8s/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-headless
spec:
  clusterIP: None
  selector:
    app: web
  ports:
  - port: 80
